Add changes to build repo using jdk21